styleFlex.css
html, body {background: #444; font-family: 'Lato', helvetica, arial, sans-serif; font-size: 16px; color: #222;}

a { 
	text-decoration:none;
}

a:hover { 
	color: #cf8a05;
}

h3 {
	margin-top: 7px;
	margin-bottom: 7px;
}

h4 {
	margin-top: 5px;
	margin-bottom: 5px;
}

#cv {
	width: 90%;
	max-width: 1400px;
	background: #f3f3f3;
	margin: 30px auto;
}

#headerContainer {
	display: grid;
	grid-template-columns: 200px auto;
	grid-template-rows: auto;
	padding: 15px 35px;
	border-bottom: 2px solid #cf8a05;
	background: #ededed;
}

#photo {
	grid-column-start: 1;
}

#photo img {
	width: 90%;
	height: auto;
	-webkit-border-radius: 50px;
	border-radius: 50px;
}

#nameAndRole {
	grid-column-start: 2;
	align-self:center;
	margin-right: 40px;
}

span {
	white-space:nowrap;
}

#nameAndRole h1 {
	font-size: 2.5em;
	font-weight: 700;
	margin-top: 0px;
	margin-bottom: 0px;
}

#nameAndRole h2 {
	font-size: 1.5em;
	font-weight: 500;
	margin-bottom: 0px;
}

#contactDetails {
	grid-column-start: 3;
	align-self:center;
	margin-top: 30px;
	font-size: 0.9em;
	display:grid;
	grid-gap: 7px;
	grid-template-columns: auto;
	grid-template-rows: auto;
}

#contactDetails .contactKey {
	grid-column-start: 1;
}

#contactDetails .contactValue {
	grid-column-start: 2;
}

.contactLinksForScreen {
	line-height: 24px;
}

#contactDetails a { 
	white-space: nowrap;
	//vertical-align: middle;
}

.sectionContainer {
	display:grid;
	grid-template-columns: 200px auto;
	grid-template-rows: auto;
	padding: 5px 35px;
}

.sectionContainer:not(:last-child) {
	border-bottom: 1px solid #cf8a05;
}
.sectionTitle {
	grid-column-start: 1;
	font-style: italic;
	color: #cf8a05;
}

.sectionTitle h2 {	
	margin-bottom: 0px;
}

.sectionContent {
	grid-column-start: 2;
}

.webContactsKey {
	line-height: 24px;
}

.externalSiteImage {
	width:24px;
	height:24px;
	vertical-align: middle;
}

.skillslist ul {
	padding: 0px;
	text-align: center;
}

.skillslist li {
	display: inline;
	background-color: #d5e5f0;
	border-radius: 7px;
	padding: 3px;
	line-height: 2em;
}

article:not(:last-child) {
	border-bottom: 1px solid black;
}

article li {
	margin-bottom: 5px;
}

.referenceContainer {
	display: flex;
	flex-wrap: wrap;
}

.reference {
	text-align: center;
	width:100px;
	height:100px;
	margin:10px;
	background-image: url("document.png");
	background-size:100%
}

.reference a {
	height:100px;
	display: table-cell;
	vertical-align:middle;
	padding:5px 20px;
	font-size:12px;
}

@media (max-width: 992px) {
	#headerContainer {
		grid-template-columns: 125px auto;
	}
	#photo {
		grid-row-start:1;
		grid-row-end:3;
		align-self:center;
		margin-left:-15px

	}
	#photo img {
		width: 80%;
	}
	#nameAndRole {
		text-align: center;
		margin-right:0px;
	}

	#contactDetails {
		grid-column-start:2;
		margin-top:10px;		
	}
	.sectionContainer {
		grid-template-columns: 125px auto;
		font-size: 0.8em;
	}
}

@media screen and (max-width: 768px) {
	#cv {
		width: 100%;
		margin: auto;
	}
	#headerContainer {
		grid-template-columns: auto;
		padding:10px 10px;
	}
	#photo {
		display:none;
	}
	#nameAndRole {
		grid-column-start:1;
		text-align: center;
		margin-right:0px;
	}
	#contactDetails {
		grid-column-start:1;	
		margin-top:20px;		
	}
	
	.sectionContainer {
		grid-template-columns: auto;
		padding:0px 10px;
	}
	
	.sectionTitle h2 {
		text-align: center;
	}
	
	.sectionContent {
		grid-column-start:1;	
	}
	
}

@media not print {
	.contactLinksForScreen {
		display: inline;
	}
	.contactValueForPrint {
		display: none;
	}
}
@media print {
	.contactLinksForScreen {
		display:none;
	}
	.contactValueForPrint {
		display: inline;
	}
	#documentScansSection {
		display:none;
	}
	
	.skillslist li {
		background-color:none;
		box-shadow: inset 0 0 0 1000px #d5e5f0;	// background color that works for print too
	}
}

